[gd_scene format=3 uid="uid://bd0auisdvfagw"]

[ext_resource type="PackedScene" uid="uid://ctlnpeebeoqgd" path="res://inGame/npc/npc.tscn" id="1_kfrmh"]
[ext_resource type="Script" uid="uid://sj0wnis8wnpb" path="res://inGame/npc/player/player.gd" id="2_v55o0"]
[ext_resource type="Script" uid="uid://diifqu7v6338q" path="res://inGame/npc/base_actions/action.gd" id="3_4d70r"]
[ext_resource type="PackedScene" uid="uid://c3e3n4jvt2s4t" path="res://inGame/sound/random_pitch.tscn" id="3_eymni"]
[ext_resource type="AudioStream" uid="uid://jxg26yncsnmv" path="res://placeholderArt/sfx/attackPlus.wav" id="4_gtbgf"]
[ext_resource type="Resource" uid="uid://fe6kckp853qt" path="res://inGame/npc/base_actions/attack.tres" id="4_uclv0"]
[ext_resource type="Resource" uid="uid://bfl5bur20t3il" path="res://inGame/npc/base_actions/defend.tres" id="5_55gq4"]
[ext_resource type="AudioStream" uid="uid://bug0c63f6jtmr" path="res://placeholderArt/sfx/sprun_get.wav" id="5_gtbgf"]
[ext_resource type="Resource" uid="uid://ckrxohf0inp4t" path="res://inGame/npc/base_actions/passing.tres" id="6_2f4im"]
[ext_resource type="Resource" uid="uid://46w2r3n41yw6" path="res://inGame/npc/base_actions/sprun.tres" id="7_4fnqf"]
[ext_resource type="Resource" uid="uid://ds1u2a18cppdb" path="res://inGame/npc/base_actions/buff.tres" id="8_uclv0"]
[ext_resource type="Resource" uid="uid://c0se36fsmgo7o" path="res://inGame/npc/base_actions/bigAtk.tres" id="9_55gq4"]

[node name="Player" unique_id=191932641 instance=ExtResource("1_kfrmh")]
size_flags_vertical = 3
script = ExtResource("2_v55o0")
sprun_slots = 3
sprun_container_angle = 135
sprun_distance = 60
sprun_active = 0
new_action = Array[ExtResource("3_4d70r")]([])
player_type = 2
icon = null
speed_stat = 5
attack_stat = 6
is_player = true
actions = Array[ExtResource("3_4d70r")]([ExtResource("4_uclv0"), ExtResource("5_55gq4"), ExtResource("6_2f4im"), ExtResource("7_4fnqf"), ExtResource("8_uclv0"), ExtResource("9_55gq4")])

[node name="VSeparator2" parent="VBoxContainer" parent_id_path=PackedInt32Array(1192966142) index="0" unique_id=645862984]
size_flags_stretch_ratio = 0.16

[node name="Icon" parent="VBoxContainer" parent_id_path=PackedInt32Array(1192966142) index="3" unique_id=1248940755]
expand_mode = 2

[node name="SprunContainer" type="Control" parent="VBoxContainer/Icon" index="0" unique_id=95595717]
layout_mode = 1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_behavior_recursive = 1
metadata/_edit_use_anchors_ = true

[node name="VSeparator" parent="VBoxContainer" parent_id_path=PackedInt32Array(1192966142) index="4" unique_id=1343814083]
size_flags_stretch_ratio = 0.13

[node name="VSeparator3" parent="VBoxContainer" parent_id_path=PackedInt32Array(1192966142) index="8" unique_id=1046638672]
size_flags_stretch_ratio = 0.05

[node name="BigAttack" parent="." index="5" unique_id=2000103591 instance=ExtResource("3_eymni")]
stream = ExtResource("4_gtbgf")

[node name="SprunGet" parent="." index="6" unique_id=1104388188 instance=ExtResource("3_eymni")]
stream = ExtResource("5_gtbgf")
